Minimal VM build fails after JDK-8273459

XMLWordPrintable

    • b18


        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/jdk/src/hotspot/cpu/x86/macroAssembler_x86.cpp:1182), pid=96868, tid=96874
        # assert(modulus <= CodeEntryAlignment) failed: Alignment must be <= CodeEntryAlignment
        #
        # JRE version: (18.0) (fastdebug build )
        # Java VM: OpenJDK 64-Bit Minimal VM (fastdebug 18-internal+0-adhoc.jvm.jdk, mixed mode, emulated-client, compressed oops, compressed class ptrs, serial gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x390e16]
        #

              Assignee:
              Jie Fu
              Reporter:
              Jie Fu
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: