8274527: Minimal VM build fails after JDK-8273459